# model_tranning_1

./: README.md  main.py  pyproject.toml  test.py  train.jsonl  train.py
neo-lora/checkpoint-1000/: adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
neo-lora/checkpoint-1250/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  special_tokens_map.json  trainer_state.json
neo-lora/checkpoint-250/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
neo-lora/checkpoint-500/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
neo-lora/checkpoint-750/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
