[project]
name = "model-tranning-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "peft>=0.18.1",
    "python-decouple>=3.8",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]
